Omnibox UI: Fix Cocoa suggestion lines for short lines (again).

BUG=731025

Review-Url: https://codereview.chromium.org/2924303002
Cr-Commit-Position: refs/heads/master@{#478432}

Former-commit-id: edcd7da1e6157b263551180f0e26c1a826452d53